--- a/src/components/pages/UseCases/BeginnerBasics/BeginnerBasics.module.scss
+++ b/src/components/pages/UseCases/BeginnerBasics/BeginnerBasics.module.scss
@@ -104,6 +104,18 @@
   position: relative; // For tooltip positioning
 }
 
+.icon {
+  width: 24px;
+  height: 24px;
+  min-width: 24px;
+  min-height: 24px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+}
+
 .tooltip {
   position: absolute;
   top: -40px; // Position above the icon
